# custom_containers

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  base_versions.json  docker-bake.hcl  docker-compose.yml  env-example
.github/: dependabot.yml
book-keeper-frappe/: README.md  book_keeper_client.py  develop.yaml  entrypoint-tigerbeetle.sh  test_bookkeeper.py
ci/: apps.json  build.env  clone-apps.sh  version.txt
compose/: cadvisor.compose.yml  configure-erpnext.yml  create-site.yml  dokploy.yml  erpnext-backup.yml  erpnext.yml  mariadb.yml  portainer-dind.yml  portainer.yml  swarm-cron.yml  traefik-aws.yaml  traefik-aws.yml  traefik-dind.yml  traefik-host.yml  wordpress.yml
devcontainer/: compose.yml  devcontainer.json
development/: README.md  apps.json  setup.sh
dind-devcontainer/: Dockerfile  compose.yml  devcontainer.json  setup-docker-env.sh
docs/: cli-to-api.md  devcontainer.md  docker-swarm.md  ferretdb-documentdb-cnpg.md  frappe-cd.md  frappe-ci-cd.md  frappe-hardware-calculations.md  getting-started-for-enterprise.md  gunicorn-pods.md  k3s-cluster.md  k8s-argocd.md  k8s-bench.md  k8s-ferretdb-documentdb-cnpg.md  k8s-prom-stack.md  kube-devcontainer.md  kubernetes-loadbalancer.md  migrate-from-vm.md  org-level-credentials-github.md  overview.md  pre-dev-vm.md  remote-ssh-vscode-devcontainer.md  runner-api.md
frappe-builder-repo/: 00-otel.conf  Containerfile  common.env  compose.yml  generate_apps_json.py  opentelemetry_module.conf
frappe-ci-cd/: .eslintrc.js  .pre-commit-config.yaml  release.py  (+2 more)
urlcrazy/: Containerfile  main.py  pyproject.toml
(+38 files in other folders)
